# vulkan_minimal_compute

./: .gitmodules  CMakeLists.txt  README.md
scripts/: bootstrap-linux.sh  build-validation-layers-linux.sh
src/: main.cpp
